# searxng

./: .gitignore  Cargo.toml  RUST_PORT_ROADMAP.md
src/: config.rs  lib.rs  main.rs  models.rs
src/engines/: aggregator.rs  bing.rs  circuit_breaker.rs  duckduckgo.rs  dummy.rs  error.rs  google.rs  mod.rs  qwant.rs  reddit.rs  registry.rs  wikipedia.rs
src/web/: error.rs  mod.rs  templates.rs
templates/: atom.xml  base.html  index.html  opensearch.xml  results.html  rss.xml
tests/: config_integration.rs
