[package]
name = "searxng-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
anyhow = "1.0"
thiserror = "1.0"
askama = "0.12"
askama_axum = "0.4"
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "fs", "cors"] }
clap = { version = "4.5", features = ["derive"] }
rust-embed = "8.3"
async-trait = "0.1"
scraper = "0.25"
url = "2.5.8"
arc-swap = "1.8.1"
notify = "8.2.0"
ammonia = "4.1.2"
